# Peoplebot-Tutorial

./: README.md  run_2dslam.sh
peoplebot/: CMakeLists.txt  package.xml
peoplebot/launch/: teleop.launch
peoplebot/src/: action_move_robot.py
peoplebot_navigation/: CMakeLists.txt  package.xml
peoplebot_navigation/launch/: move_base.launch  peoplebot_navigation.launch
peoplebot_navigation/maps/: 501.pgm  501.yaml
peoplebot_navigation/param/: costmap_common_params.yaml
peoplebot_navigation/rviz/: peoplebot_navigation.rviz
peoplebot_slam/: CMakeLists.txt  package.xml
peoplebot_slam/launch/: peoplebot_gmapping.launch  peoplebot_slam.launch
peoplebot_slam/src/: flat_world_imu_node.cpp
peoplebot_teleop/: CMakeLists.txt  package.xml  setup.py
peoplebot_teleop/launch/: peoplebot_teleop_key.launch
peoplebot_teleop/nodes/: peoplebot_teleop_key
peoplebot_tf/: CMakeLists.txt  package.xml
peoplebot_tf/launch/: static_tf.launch
visualization/: gmapping.rviz
